# robot-dynamics-identify-v1.5

./: README.md
dynamics_library/: CMakeLists.txt
dynamics_library/include/dynamics_library/: robot_identify.h  robot_math.h  robot_model.h
dynamics_library/src/: robot_identify.cpp  robot_model.cpp
examples/excitation_trajectory/: CMakeLists.txt
examples/excitation_trajectory/src/: excitation_trajectory.cpp
examples/least_square_estimate/: CMakeLists.txt
examples/least_square_estimate/filter_data/: qDDot_filter.txt  qDot_filter.txt  q_filter.txt  t.txt  tau_filter.txt
examples/least_square_estimate/identify_result/: tau_iden.txt
examples/least_square_estimate/include/least_square_estimate/: deal_txt_data.h
examples/least_square_estimate/src/: deal_txt_data.cpp  least_square_estimate.cpp
